--- a/Website/IoT_EE3/IoT Website/index.html
+++ b/Website/IoT_EE3/IoT Website/index.html
@@ -400,7 +400,7 @@
                                     <h3>LIS3DH</h3>
                                 </p>
                                 <p>The LIS3DH is an accelerometer. Since some goods are fragile or sensitive to sudden movements, our design contains a sensor capable of measuring acceleration.</p>
-                                <img class="img-fluid d-block mx-auto" src="img/coolbox.jpg" alt="">
+                                <img class="img-fluid d-block mx-auto" src="img/HealthPak.jpg" alt="">
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Return to main page</button>
                             </div>
                         </div>
@@ -427,7 +427,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Motivation</h2>
                                 <p class="item-intro text-muted">Why is HealthPak needed?</p>
-                                <img class="img-fluid d-block mx-auto" src="img/coolbox.jpg" alt="">
+                                <img class="img-fluid d-block mx-auto" src="img/HealthPakLogoCut.png" alt="">
                                 <p>With the technological advances in goods shipment and delivery, we are now able to track the location of our purchases at any given time. In the case of sensitive goods that are stored in refrigerators such as medicine, organs or even some foods, however, the manufacturer, retailer or consumer might be interested in the conditions in which these goods were stored during transportation. Vaccines or organs, for instance, require an ambient temperature of 2 to 8ºC. If the cooling box's temperature is outside these bounds, the vaccine loses effectiveness. This can cause the consumer to lose trust in the product and cost a lot of money to the manufacturer. CoolBox measures this data and makes it available for anyone involved with the shipped goods enhancing customer relationships, allowing retailers to discard any wrongly stored goods and providing intel to manufacturers on any reoccurring storage problems.</p>
                                 <div class="row no-gutters popup-gallery">
                                   <div class="col-lg-6 col-sm-6">
